--- a/kolown/2025.md
+++ b/kolown/2025.md
@@ -3,6 +3,7 @@
 
 - static composition 
 - the theme for 2025 is transmission
+- review colors of the wind
 - intersection of [[neo-noir ]] [[post-vandalism]] internet-art 
 - [[Signals]] 2025 studies
 
